# CMakeGL

./: CMakeLists.txt
src/Project/: CMakeLists.txt  ProjectApplication.cpp
src/Project/include/: ProjectApplication.hpp
src/runtime/: Application.cpp  CMakeLists.txt
